--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "virt_dom",
   "version": "0.0.1",
-  "description": "virt_dom for the browser and node.js",
+  "description": "virt DOM for the browser and node.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/nathanfaucett/virt_dom.git"
@@ -26,7 +26,11 @@
   },
   "dependencies": {
     "extend": "git://github.com/nathanfaucett/extend",
+    "get_prototype_of": "git://github.com/nathanfaucett/get_prototype_of",
     "has": "git://github.com/nathanfaucett/has",
+    "is_array": "git://github.com/nathanfaucett/is_array",
+    "is_element": "git://github.com/nathanfaucett/is_element",
+    "is_function": "git://github.com/nathanfaucett/is_function",
     "is_null_or_undefined": "git://github.com/nathanfaucett/is_null_or_undefined",
     "is_object": "git://github.com/nathanfaucett/is_object",
     "is_string": "git://github.com/nathanfaucett/is_string",
