--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "mocha": "^2.1.0"
   },
   "dependencies": {
-    "extend": "git://github.com/nathanfaucett/extend",
     "get_prototype_of": "git://github.com/nathanfaucett/get_prototype_of",
     "has": "git://github.com/nathanfaucett/has",
     "is_array": "git://github.com/nathanfaucett/is_array",
@@ -34,6 +33,7 @@
     "is_null_or_undefined": "git://github.com/nathanfaucett/is_null_or_undefined",
     "is_object": "git://github.com/nathanfaucett/is_object",
     "is_string": "git://github.com/nathanfaucett/is_string",
-    "map": "git://github.com/nathanfaucett/map"
+    "map": "git://github.com/nathanfaucett/map",
+    "virt": "git://github.com/nathanfaucett/virt"
   }
 }
