--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   ],
   "scripts": {
     "test": "comn -f example/test/src/index.js -o example/test/index.js",
+    "react_test": "comn -f example/react_test/src/index.js -o example/react_test/index.js",
     "components": "comn -f example/components/src/index.js -o example/components/index.js"
   },
   "author": "Nathan Faucett",
@@ -25,9 +26,14 @@
     "mocha": "^2.1.0"
   },
   "dependencies": {
+    "create_pool": "git://github.com/nathanfaucett/create_pool",
+    "environment": "git://github.com/nathanfaucett/environment",
+    "event_listener": "git://github.com/nathanfaucett/event_listener",
     "get_prototype_of": "git://github.com/nathanfaucett/get_prototype_of",
     "has": "git://github.com/nathanfaucett/has",
+    "inherits": "git://github.com/nathanfaucett/inherits",
     "is_array": "git://github.com/nathanfaucett/is_array",
+    "is_document": "git://github.com/nathanfaucett/is_document",
     "is_element": "git://github.com/nathanfaucett/is_element",
     "is_function": "git://github.com/nathanfaucett/is_function",
     "is_null_or_undefined": "git://github.com/nathanfaucett/is_null_or_undefined",
