--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "event_listener": "git://github.com/nathanfaucett/event_listener",
     "get_prototype_of": "git://github.com/nathanfaucett/get_prototype_of",
     "has": "git://github.com/nathanfaucett/has",
+    "index_of": "git://github.com/nathanfaucett/index_of",
     "inherits": "git://github.com/nathanfaucett/inherits",
     "is_array": "git://github.com/nathanfaucett/is_array",
     "is_document": "git://github.com/nathanfaucett/is_document",
@@ -39,6 +40,7 @@
     "is_null_or_undefined": "git://github.com/nathanfaucett/is_null_or_undefined",
     "is_object": "git://github.com/nathanfaucett/is_object",
     "is_string": "git://github.com/nathanfaucett/is_string",
+    "keys": "git://github.com/nathanfaucett/keys",
     "map": "git://github.com/nathanfaucett/map",
     "virt": "git://github.com/nathanfaucett/virt"
   }
