--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "create_pool": "git://github.com/nathanfaucett/create_pool",
     "environment": "git://github.com/nathanfaucett/environment",
     "event_listener": "git://github.com/nathanfaucett/event_listener",
+    "for_each": "git://github.com/nathanfaucett/for_each",
     "get_prototype_of": "git://github.com/nathanfaucett/get_prototype_of",
     "has": "git://github.com/nathanfaucett/has",
     "index_of": "git://github.com/nathanfaucett/index_of",
@@ -40,7 +41,7 @@
     "is_null_or_undefined": "git://github.com/nathanfaucett/is_null_or_undefined",
     "is_object": "git://github.com/nathanfaucett/is_object",
     "is_string": "git://github.com/nathanfaucett/is_string",
-    "keys": "git://github.com/nathanfaucett/keys",
+    "key_mirror": "git://github.com/nathanfaucett/key_mirror",
     "map": "git://github.com/nathanfaucett/map",
     "virt": "git://github.com/nathanfaucett/virt"
   }
