--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "scripts": {
     "test": "comn -f example/test/src/index.js -o example/test/index.js",
     "replace": "comn -f example/replace/src/index.js -o example/replace/index.js",
+    "mounting": "comn -f example/mounting/src/index.js -o example/mounting/index.js",
     "react_test": "comn -f example/react_test/src/index.js -o example/react_test/index.js",
+    "react_components": "comn -f example/react_components/src/index.js -o example/react_components/index.js",
     "components": "comn -f example/components/src/index.js -o example/components/index.js"
   },
   "author": "Nathan Faucett",
@@ -28,9 +30,12 @@
   },
   "dependencies": {
     "create_pool": "git://github.com/nathanfaucett/create_pool",
+    "dom_class": "git://github.com/nathanfaucett/dom_class",
+    "empty_function": "git://github.com/nathanfaucett/empty_function",
     "environment": "git://github.com/nathanfaucett/environment",
+    "escape_text_content": "git://github.com/nathanfaucett/escape_text_content",
     "event_listener": "git://github.com/nathanfaucett/event_listener",
-    "for_each": "git://github.com/nathanfaucett/for_each",
+    "for_each": "git://git@github.com/nathanfaucett/for_each",
     "get_prototype_of": "git://github.com/nathanfaucett/get_prototype_of",
     "has": "git://github.com/nathanfaucett/has",
     "index_of": "git://github.com/nathanfaucett/index_of",
@@ -44,6 +49,7 @@
     "is_string": "git://github.com/nathanfaucett/is_string",
     "key_mirror": "git://github.com/nathanfaucett/key_mirror",
     "map": "git://github.com/nathanfaucett/map",
+    "supports": "git://github.com/nathanfaucett/supports",
     "virt": "git://github.com/nathanfaucett/virt"
   }
 }
