--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "environment": "git://github.com/nathanfaucett/environment",
     "escape_text_content": "git://github.com/nathanfaucett/escape_text_content",
     "event_listener": "git://github.com/nathanfaucett/event_listener",
-    "for_each": "git://git@github.com/nathanfaucett/for_each",
+    "for_each": "git://github.com/nathanfaucett/for_each",
     "get_prototype_of": "git://github.com/nathanfaucett/get_prototype_of",
     "has": "git://github.com/nathanfaucett/has",
     "index_of": "git://github.com/nathanfaucett/index_of",
