clean up events

--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "virt_dom.js"
   ],
   "scripts": {
-    "test": "comn -f example/test/src/index.js -o example/test/index.js",
-    "replace": "comn -f example/replace/src/index.js -o example/replace/index.js",
-    "mounting": "comn -f example/mounting/src/index.js -o example/mounting/index.js",
-    "react_test": "comn -f example/react_test/src/index.js -o example/react_test/index.js",
-    "react_components": "comn -f example/react_components/src/index.js -o example/react_components/index.js",
-    "components": "comn -f example/components/src/index.js -o example/components/index.js"
+    "test": "comn -f examples/test/src/index.js -o examples/test/index.js",
+    "replace": "comn -f examples/replace/src/index.js -o examples/replace/index.js",
+    "mounting": "comn -f examples/mounting/src/index.js -o examples/mounting/index.js",
+    "react_test": "comn -f examples/react_test/src/index.js -o examples/react_test/index.js",
+    "react_components": "comn -f examples/react_components/src/index.js -o examples/react_components/index.js",
+    "components": "comn -f examples/components/src/index.js -o examples/components/index.js",
+    "workers": "comn -f examples/workers/src/index.js -o examples/workers/index.js && comn -f examples/workers/src/worker.js -o examples/workers/worker.js",
+    "examples": "npm run test && npm run replace && npm run mounting && npm run components && npm run workers && npm run react_test  && npm run react_components"
   },
   "author": "Nathan Faucett",
   "license": "BSD-2-Clause",
@@ -37,12 +39,12 @@
     "for_each": "git://github.com/nathanfaucett/for_each",
     "get_prototype_of": "git://github.com/nathanfaucett/get_prototype_of",
     "has": "git://github.com/nathanfaucett/has",
-    "index_of": "git://github.com/nathanfaucett/index_of",
     "inherits": "git://github.com/nathanfaucett/inherits",
     "is_array": "git://github.com/nathanfaucett/is_array",
     "is_document": "git://github.com/nathanfaucett/is_document",
     "is_element": "git://github.com/nathanfaucett/is_element",
     "is_function": "git://github.com/nathanfaucett/is_function",
+    "is_node": "git://github.com/nathanfaucett/is_node",
     "is_null_or_undefined": "git://github.com/nathanfaucett/is_null_or_undefined",
     "is_object": "git://github.com/nathanfaucett/is_object",
     "is_string": "git://github.com/nathanfaucett/is_string",
