--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "virt_dom",
+  "name": "virt-dom",
   "version": "0.0.1",
   "description": "virt DOM for the browser and node.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/nathanfaucett/virt_dom.git"
+    "url": "https://github.com/nathanfaucett/virt-dom.git"
   },
   "main": "src/index.js",
   "keywords": [
-    "virt_dom",
-    "virt_dom.js"
+    "virt-dom",
+    "virt-dom.js"
   ],
   "scripts": {
     "test": "comn -f examples/test/src/index.js -o examples/test/index.js",
