--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "mocha": "^2.1.0"
   },
   "dependencies": {
+    "blur_node": "git://github.com/nathanfaucett/blur_node",
     "create_pool": "git://github.com/nathanfaucett/create_pool",
     "environment": "git://github.com/nathanfaucett/environment",
     "escape_text_content": "git://github.com/nathanfaucett/escape_text_content",
     "event_listener": "git://github.com/nathanfaucett/event_listener",
+    "focus_node": "git://github.com/nathanfaucett/focus_node",
     "for_each": "git://github.com/nathanfaucett/for_each",
     "get_prototype_of": "git://github.com/nathanfaucett/get_prototype_of",
     "has": "git://github.com/nathanfaucett/has",
