--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "components": "comn -f examples/components/src/index.js -o examples/components/index.js",
     "workers": "comn -f examples/workers/src/index.js -o examples/workers/index.js && comn -f examples/workers/src/worker.js -o examples/workers/worker.js",
     "worker_form": "comn -f examples/worker_form/src/index.js -o examples/worker_form/index.js && comn -f examples/worker_form/src/worker.js -o examples/worker_form/worker.js",
-    "examples": "npm run test && npm run replace && npm run components && npm run workers && npm run worker_form"
+    "websocket_form": "comn -f examples/websocket_form/src/index.js -o examples/websocket_form/index.js",
+    "examples": "npm run test && npm run replace && npm run components && npm run workers && npm run worker_form && npm run websocket_form"
   },
   "author": "Nathan Faucett",
   "license": "BSD-2-Clause",
   "readmeFilename": "README.md",
   "devDependencies": {
+    "comn": "git://github.com/nathanfaucett/comn",
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-jsbeautifier": "^0.2.7",
@@ -51,6 +53,7 @@
     "map": "git://github.com/nathanfaucett/map",
     "messenger": "git://github.com/nathanfaucett/messenger",
     "messenger_adaptor": "git://github.com/nathanfaucett/messenger_adaptor",
+    "messenger_websocket_adaptor": "git://github.com/nathanfaucett/messenger_websocket_adaptor",
     "messenger_worker_adaptor": "git://github.com/nathanfaucett/messenger_worker_adaptor",
     "virt": "git://github.com/nathanfaucett/virt"
   }
