--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "virt-dom.js"
   ],
   "scripts": {
-    "test": "comn -f examples/test/src/index.js -o examples/test/index.js",
+    "test-browser-local": "zuul --local 8080 --ui tape -- ./test",
+
+    "simple": "comn -f examples/simple/src/index.js -o examples/simple/index.js",
     "replace": "comn -f examples/replace/src/index.js -o examples/replace/index.js",
     "components": "comn -f examples/components/src/index.js -o examples/components/index.js",
     "workers": "comn -f examples/workers/src/index.js -o examples/workers/index.js && comn -f examples/workers/src/worker.js -o examples/workers/worker.js",
     "worker_form": "comn -f examples/worker_form/src/index.js -o examples/worker_form/index.js && comn -f examples/worker_form/src/worker.js -o examples/worker_form/worker.js",
     "websocket_form": "comn -f examples/websocket_form/src/index.js -o examples/websocket_form/index.js",
-    "examples": "npm run test && npm run replace && npm run components && npm run workers && npm run worker_form && npm run websocket_form"
+    "examples": "npm run simple && npm run replace && npm run components && npm run workers && npm run worker_form && npm run websocket_form"
   },
   "author": "Nathan Faucett",
   "license": "BSD-2-Clause",
@@ -28,7 +30,8 @@
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-jsbeautifier": "^0.2.7",
-    "mocha": "^2.1.0"
+    "tape": "^4.0.0",
+    "zuul": "^3.0.0"
   },
   "dependencies": {
     "blur_node": "git://github.com/nathanfaucett/blur_node",
