cleaned up register native components

--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   ],
   "scripts": {
     "test-browser-local": "zuul --local 8080 --ui tape -- ./test",
-
     "simple": "comn -f examples/simple/src/index.js -o examples/simple/index.js",
     "replace": "comn -f examples/replace/src/index.js -o examples/replace/index.js",
     "components": "comn -f examples/components/src/index.js -o examples/components/index.js",
@@ -40,7 +39,7 @@
     "escape_text_content": "git://github.com/nathanfaucett/escape_text_content",
     "event_listener": "git://github.com/nathanfaucett/event_listener",
     "focus_node": "git://github.com/nathanfaucett/focus_node",
-    "for_each": "git://github.com/nathanfaucett/for_each",
+    "for_each": "git://github.com/nathanfaucett/for_each.git",
     "get_prototype_of": "git://github.com/nathanfaucett/get_prototype_of",
     "has": "git://github.com/nathanfaucett/has",
     "inherits": "git://github.com/nathanfaucett/inherits",
