--- a/examples/websocket_form/package.json
+++ b/examples/websocket_form/package.json
@@ -4,13 +4,13 @@
   "main": "index.js",
   "author": "Nathan Faucett",
   "dependencies": {
-    "environment": "git://github.com/nathanfaucett/environment",
-    "event_emitter": "git://github.com/nathanfaucett/event_emitter",
-    "event_listener": "git://github.com/nathanfaucett/event_listener",
-    "parallel": "git://github.com/nathanfaucett/parallel",
-    "prop_types": "git://github.com/nathanfaucett/prop_types",
+    "environment": "git://github.com/nathanfaucett/environment.git",
+    "event_emitter": "git://github.com/nathanfaucett/event_emitter.git",
+    "event_listener": "git://github.com/nathanfaucett/event_listener.git",
+    "parallel": "git://github.com/nathanfaucett/parallel.git",
+    "prop_types": "git://github.com/nathanfaucett/prop_types.git",
     "socket.io": "^1.3.5",
     "socket.io-client": "^1.3.5",
-    "values": "git://github.com/nathanfaucett/values"
+    "values": "git://github.com/nathanfaucett/values.git"
   }
 }
