--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "blur_node": "git://github.com/nathanfaucett/blur_node",
     "create_pool": "git://github.com/nathanfaucett/create_pool",
+    "dom_caret": "git://github.com/nathanfaucett/dom_caret.git",
     "environment": "git://github.com/nathanfaucett/environment",
     "escape_text_content": "git://github.com/nathanfaucett/escape_text_content",
     "event_listener": "git://github.com/nathanfaucett/event_listener",
@@ -49,7 +50,7 @@
     "is_array": "git://github.com/nathanfaucett/is_array",
     "is_document": "git://github.com/nathanfaucett/is_document",
     "is_element": "git://github.com/nathanfaucett/is_element",
-    "is_function": "git://github.com/nathanfaucett/is_function",
+    "is_function": "git://github.com/nathanfaucett/is_function.git",
     "is_node": "git://github.com/nathanfaucett/is_node",
     "is_null_or_undefined": "git://github.com/nathanfaucett/is_null_or_undefined",
     "is_object": "git://github.com/nathanfaucett/is_object",
