--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "blur_node": "git://github.com/nathanfaucett/blur_node",
     "create_pool": "git://github.com/nathanfaucett/create_pool",
     "dom_caret": "git://github.com/nathanfaucett/dom_caret.git",
+    "empty_function": "git://github.com/nathanfaucett/empty_function.git",
     "environment": "git://github.com/nathanfaucett/environment",
     "escape_text_content": "git://github.com/nathanfaucett/escape_text_content",
     "event_listener": "git://github.com/nathanfaucett/event_listener",
