--- a/package.json
+++ b/package.json
@@ -13,57 +13,59 @@
   ],
   "scripts": {
     "test-browser-local": "zuul --local 8080 --ui tape -- ./test",
-    "input_events": "comn -f examples/input_events/src/index.js -o examples/input_events/index.js",
-    "dragdrop": "comn -f examples/dragdrop/src/index.js -o examples/dragdrop/index.js",
-    "simple": "comn -f examples/simple/src/index.js -o examples/simple/index.js",
-    "replace": "comn -f examples/replace/src/index.js -o examples/replace/index.js",
-    "components": "comn -f examples/components/src/index.js -o examples/components/index.js",
-    "workers": "comn -f examples/workers/src/index.js -o examples/workers/index.js && comn -f examples/workers/src/worker.js -o examples/workers/worker.js",
-    "worker_form": "comn -f examples/worker_form/src/index.js -o examples/worker_form/index.js && comn -f examples/worker_form/src/worker.js -o examples/worker_form/worker.js",
-    "websocket_form": "comn -f examples/websocket_form/src/index.js -o examples/websocket_form/index.js",
+    "input_events": "comn -f ./examples/input_events/src/index.js -o ./examples/input_events/index.js",
+    "dragdrop": "comn -f ./examples/dragdrop/src/index.js -o ./examples/dragdrop/index.js",
+    "simple": "comn -f ./examples/simple/src/index.js -o ./examples/simple/index.js",
+    "replace": "comn -f ./examples/replace/src/index.js -o ./examples/replace/index.js",
+    "components": "comn -f ./examples/components/src/index.js -o ./examples/components/index.js",
+    "workers": "comn -f ./examples/workers/src/index.js -o ./examples/workers/index.js && comn -f ./examples/workers/src/worker.js -o ./examples/workers/worker.js",
+    "worker_form": "comn -f ./examples/worker_form/src/index.js -o ./examples/worker_form/index.js && comn -f ./examples/worker_form/src/worker.js -o examples/worker_form/worker.js",
+    "websocket_form": "comn -f ./examples/websocket_form/src/index.js -o ./examples/websocket_form/index.js",
     "examples": "npm run dragdrop && npm run simple && npm run replace && npm run components && npm run workers && npm run worker_form && npm run websocket_form"
   },
   "author": "Nathan Faucett",
   "license": "MIT",
   "readmeFilename": "README.md",
   "devDependencies": {
-    "comn": "git://github.com/nathanfaucett/comn",
+    "comn": "git://github.com/nathanfaucett/comn.git",
     "grunt": "^0.4.5",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-jsbeautifier": "^0.2.7",
-    "tape": "^4.0.0",
-    "zuul": "^3.0.0"
+    "grunt-contrib-jshint": "^0.11.3",
+    "grunt-jsbeautifier": "^0.2.10",
+    "tape": "^4.2.2",
+    "zuul": "^3.7.2"
   },
   "dependencies": {
-    "blur_node": "git://github.com/nathanfaucett/blur_node",
-    "create_pool": "git://github.com/nathanfaucett/create_pool",
+    "blur_node": "git://github.com/nathanfaucett/blur_node.git",
+    "create_pool": "git://github.com/nathanfaucett/create_pool.git",
     "dom_caret": "git://github.com/nathanfaucett/dom_caret.git",
     "empty_function": "git://github.com/nathanfaucett/empty_function.git",
-    "environment": "git://github.com/nathanfaucett/environment",
-    "escape_text_content": "git://github.com/nathanfaucett/escape_text_content",
-    "event_listener": "git://github.com/nathanfaucett/event_listener",
+    "environment": "git://github.com/nathanfaucett/environment.git",
+    "escape_text_content": "git://github.com/nathanfaucett/escape_text_content.git",
+    "event_listener": "git://github.com/nathanfaucett/event_listener.git",
     "extend": "git://github.com/nathanfaucett/extend.git",
-    "focus_node": "git://github.com/nathanfaucett/focus_node",
+    "focus_node": "git://github.com/nathanfaucett/focus_node.git",
     "for_each": "git://github.com/nathanfaucett/for_each.git",
-    "get_prototype_of": "git://github.com/nathanfaucett/get_prototype_of",
-    "has": "git://github.com/nathanfaucett/has",
+    "get_prototype_of": "git://github.com/nathanfaucett/get_prototype_of.git",
+    "has": "git://github.com/nathanfaucett/has.git",
     "index_of": "git://github.com/nathanfaucett/index_of.git",
-    "inherits": "git://github.com/nathanfaucett/inherits",
-    "is_array": "git://github.com/nathanfaucett/is_array",
-    "is_document": "git://github.com/nathanfaucett/is_document",
-    "is_element": "git://github.com/nathanfaucett/is_element",
+    "inherits": "git://github.com/nathanfaucett/inherits.git",
+    "is_array": "git://github.com/nathanfaucett/is_array.git",
+    "is_document": "git://github.com/nathanfaucett/is_document.git",
+    "is_element": "git://github.com/nathanfaucett/is_element.git",
     "is_function": "git://github.com/nathanfaucett/is_function.git",
-    "is_node": "git://github.com/nathanfaucett/is_node",
-    "is_null_or_undefined": "git://github.com/nathanfaucett/is_null_or_undefined",
-    "is_object": "git://github.com/nathanfaucett/is_object",
-    "is_string": "git://github.com/nathanfaucett/is_string",
-    "key_mirror": "git://github.com/nathanfaucett/key_mirror",
-    "map": "git://github.com/nathanfaucett/map",
-    "messenger": "git://github.com/nathanfaucett/messenger",
-    "messenger_adapter": "git://github.com/nathanfaucett/messenger_adapter",
-    "messenger_websocket_adapter": "git://github.com/nathanfaucett/messenger_websocket_adapter",
-    "messenger_worker_adapter": "git://github.com/nathanfaucett/messenger_worker_adapter",
+    "is_node": "git://github.com/nathanfaucett/is_node.git",
+    "is_null": "git://github.com/nathanfaucett/is_null.git",
+    "is_undefined": "git://github.com/nathanfaucett/is_undefined.git",
+    "is_null_or_undefined": "git://github.com/nathanfaucett/is_null_or_undefined.git",
+    "is_object": "git://github.com/nathanfaucett/is_object.git",
+    "is_string": "git://github.com/nathanfaucett/is_string.git",
+    "key_mirror": "git://github.com/nathanfaucett/key_mirror.git",
+    "map": "git://github.com/nathanfaucett/map.git",
+    "messenger": "git://github.com/nathanfaucett/messenger.git",
+    "messenger_adapter": "git://github.com/nathanfaucett/messenger_adapter.git",
+    "messenger_websocket_adapter": "git://github.com/nathanfaucett/messenger_websocket_adapter.git",
+    "messenger_worker_adapter": "git://github.com/nathanfaucett/messenger_worker_adapter.git",
     "supports": "git://github.com/nathanfaucett/supports.git",
-    "virt": "git://github.com/nathanfaucett/virt"
+    "virt": "git://github.com/nathanfaucett/virt.git"
   }
 }
