--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "blur_node": "git://github.com/nathanfaucett/blur_node.git",
     "create_pool": "git://github.com/nathanfaucett/create_pool.git",
     "dom_caret": "git://github.com/nathanfaucett/dom_caret.git",
+    "dom_dimensions": "git://github.com/nathanfaucett/dom_dimensions.git",
     "empty_function": "git://github.com/nathanfaucett/empty_function.git",
     "environment": "git://github.com/nathanfaucett/environment.git",
     "escape_text_content": "git://github.com/nathanfaucett/escape_text_content.git",
@@ -50,6 +51,8 @@
     "focus_node": "git://github.com/nathanfaucett/focus_node.git",
     "for_each": "git://github.com/nathanfaucett/for_each.git",
     "get_prototype_of": "git://github.com/nathanfaucett/get_prototype_of.git",
+    "get_event_char_code": "git://github.com/nathanfaucett/get_event_char_code.git",
+    "get_event_key": "git://github.com/nathanfaucett/get_event_key.git",
     "has": "git://github.com/nathanfaucett/has.git",
     "index_of": "git://github.com/nathanfaucett/index_of.git",
     "inherits": "git://github.com/nathanfaucett/inherits.git",
