readme updates, clean up

--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "virt-dom",
+  "name": "@nathanfaucett/virt-dom",
   "version": "0.0.1",
-  "description": "virt DOM for the browser and node.js",
+  "description": "virt DOM is a render adapter for virt",
   "repository": {
     "type": "git",
     "url": "https://github.com/nathanfaucett/virt-dom.git"
   },
   "main": "src/index.js",
   "keywords": [
+    "virt",
+    "adapter",
     "virt-dom",
     "virt-dom.js"
   ],
   "scripts": {
-    "test-browser-local": "zuul --local 8080 --ui tape -- ./test",
     "virt-dom": "comn -f ./src/index.js -o ./dist/virt-dom.js -e virtDOM && grunt envify && grunt uglify",
     "input_events": "comn -f ./examples/input_events/src/index.js -o ./examples/input_events/index.js",
     "simple": "comn -f ./examples/simple/src/index.js -o ./examples/simple/index.js",
@@ -27,53 +28,58 @@
   "license": "MIT",
   "readmeFilename": "README.md",
   "devDependencies": {
+    "@nathanfaucett/comn": "^0.0.1",
+    "@nathanfaucett/event_emitter": "0.0.1",
+    "@nathanfaucett/parallel": "0.0.1",
+    "@nathanfaucett/prop_types": "0.0.1",
+    "@nathanfaucett/request_animation_frame": "0.0.2",
+    "@nathanfaucett/values": "0.0.1",
     "bufferutil": "^1.2.1",
-    "comn": "git://github.com/nathanfaucett/comn.git",
-    "grunt": "^0.4.5",
-    "grunt-contrib-jshint": "^0.11.3",
+    "grunt": "^1.0.1",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-uglify": "^1.0.1",
     "grunt-env": "^0.4.4",
     "grunt-envify": "0.0.3",
-    "grunt-jsbeautifier": "^0.2.10",
-    "tape": "^4.2.2",
-    "utf-8-validate": "^1.2.1",
-    "zuul": "^3.7.2"
+    "grunt-jsbeautifier": "^0.2.13",
+    "socket.io-client": "^1.4.8",
+    "utf-8-validate": "^1.2.1"
   },
   "dependencies": {
-    "blur_node": "git://github.com/nathanfaucett/blur_node.git",
-    "create_pool": "git://github.com/nathanfaucett/create_pool.git",
-    "dom_caret": "git://github.com/nathanfaucett/dom_caret.git",
-    "dom_dimensions": "git://github.com/nathanfaucett/dom_dimensions.git",
-    "empty_function": "git://github.com/nathanfaucett/empty_function.git",
-    "environment": "git://github.com/nathanfaucett/environment.git",
-    "escape_text_content": "git://github.com/nathanfaucett/escape_text_content.git",
-    "event_listener": "git://github.com/nathanfaucett/event_listener.git",
-    "extend": "git://github.com/nathanfaucett/extend.git",
-    "focus_node": "git://github.com/nathanfaucett/focus_node.git",
-    "for_each": "git://github.com/nathanfaucett/for_each.git",
-    "get_prototype_of": "git://github.com/nathanfaucett/get_prototype_of.git",
-    "get_event_char_code": "git://github.com/nathanfaucett/get_event_char_code.git",
-    "get_event_key": "git://github.com/nathanfaucett/get_event_key.git",
-    "has": "git://github.com/nathanfaucett/has.git",
-    "index_of": "git://github.com/nathanfaucett/index_of.git",
-    "inherits": "git://github.com/nathanfaucett/inherits.git",
-    "is_array": "git://github.com/nathanfaucett/is_array.git",
-    "is_document": "git://github.com/nathanfaucett/is_document.git",
-    "is_element": "git://github.com/nathanfaucett/is_element.git",
-    "is_function": "git://github.com/nathanfaucett/is_function.git",
-    "is_node": "git://github.com/nathanfaucett/is_node.git",
-    "is_null": "git://github.com/nathanfaucett/is_null.git",
-    "is_null_or_undefined": "git://github.com/nathanfaucett/is_null_or_undefined.git",
-    "is_object": "git://github.com/nathanfaucett/is_object.git",
-    "is_string": "git://github.com/nathanfaucett/is_string.git",
-    "is_undefined": "git://github.com/nathanfaucett/is_undefined.git",
-    "key_mirror": "git://github.com/nathanfaucett/key_mirror.git",
-    "map": "git://github.com/nathanfaucett/map.git",
-    "messenger": "git://github.com/nathanfaucett/messenger.git",
-    "messenger_adapter": "git://github.com/nathanfaucett/messenger_adapter.git",
-    "messenger_websocket_adapter": "git://github.com/nathanfaucett/messenger_websocket_adapter.git",
-    "messenger_worker_adapter": "git://github.com/nathanfaucett/messenger_worker_adapter.git",
-    "now": "git://github.com/nathanfaucett/now.git",
-    "supports": "git://github.com/nathanfaucett/supports.git",
-    "virt": "git://github.com/nathanfaucett/virt.git"
+    "@nathanfaucett/blur_node": "^0.0.1",
+    "@nathanfaucett/create_pool": "^0.0.1",
+    "@nathanfaucett/dom_caret": "^0.0.1",
+    "@nathanfaucett/dom_dimensions": "^0.0.1",
+    "@nathanfaucett/empty_function": "^0.0.1",
+    "@nathanfaucett/environment": "^0.0.1",
+    "@nathanfaucett/escape_text_content": "^0.0.1",
+    "@nathanfaucett/event_listener": "^0.0.1",
+    "@nathanfaucett/extend": "^0.0.1",
+    "@nathanfaucett/focus_node": "^0.0.1",
+    "@nathanfaucett/array-for_each": "^0.0.1",
+    "@nathanfaucett/get_prototype_of": "^0.0.1",
+    "@nathanfaucett/get_event_char_code": "^0.0.1",
+    "@nathanfaucett/get_event_key": "^0.0.1",
+    "@nathanfaucett/has": "^0.0.1",
+    "@nathanfaucett/index_of": "^0.0.1",
+    "@nathanfaucett/inherits": "^0.0.1",
+    "@nathanfaucett/is_array": "^0.0.1",
+    "@nathanfaucett/is_document": "^0.0.1",
+    "@nathanfaucett/is_element": "^0.0.1",
+    "@nathanfaucett/is_function": "^0.0.1",
+    "@nathanfaucett/is_node": "^0.0.1",
+    "@nathanfaucett/is_null": "^0.0.1",
+    "@nathanfaucett/is_null_or_undefined": "^0.0.1",
+    "@nathanfaucett/is_object": "^0.0.1",
+    "@nathanfaucett/is_string": "^0.0.1",
+    "@nathanfaucett/is_undefined": "^0.0.1",
+    "@nathanfaucett/key_mirror": "^0.0.1",
+    "@nathanfaucett/array-map": "^0.0.1",
+    "@nathanfaucett/messenger": "^0.0.1",
+    "@nathanfaucett/messenger_adapter": "^0.0.1",
+    "@nathanfaucett/messenger_websocket_adapter": "^0.0.1",
+    "@nathanfaucett/messenger_worker_adapter": "^0.0.1",
+    "@nathanfaucett/now": "^0.0.2",
+    "@nathanfaucett/supports": "^0.0.1",
+    "@nathanfaucett/virt": "^0.0.1"
   }
 }
