--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nathanfaucett/virt-dom",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "virt DOM is a render adapter for virt",
   "repository": {
     "type": "git",
@@ -45,41 +45,41 @@
     "utf-8-validate": "^1.2.1"
   },
   "dependencies": {
-    "@nathanfaucett/blur_node": "^0.0.1",
-    "@nathanfaucett/create_pool": "^0.0.1",
-    "@nathanfaucett/dom_caret": "^0.0.1",
-    "@nathanfaucett/dom_dimensions": "^0.0.1",
-    "@nathanfaucett/empty_function": "^0.0.1",
-    "@nathanfaucett/environment": "^0.0.1",
-    "@nathanfaucett/escape_text_content": "^0.0.1",
-    "@nathanfaucett/event_listener": "^0.0.1",
-    "@nathanfaucett/extend": "^0.0.1",
-    "@nathanfaucett/focus_node": "^0.0.1",
-    "@nathanfaucett/array-for_each": "^0.0.1",
-    "@nathanfaucett/get_prototype_of": "^0.0.1",
-    "@nathanfaucett/get_event_char_code": "^0.0.1",
-    "@nathanfaucett/get_event_key": "^0.0.1",
-    "@nathanfaucett/has": "^0.0.1",
-    "@nathanfaucett/index_of": "^0.0.1",
-    "@nathanfaucett/inherits": "^0.0.1",
-    "@nathanfaucett/is_array": "^0.0.1",
-    "@nathanfaucett/is_document": "^0.0.1",
-    "@nathanfaucett/is_element": "^0.0.1",
-    "@nathanfaucett/is_function": "^0.0.1",
-    "@nathanfaucett/is_node": "^0.0.1",
-    "@nathanfaucett/is_null": "^0.0.1",
-    "@nathanfaucett/is_null_or_undefined": "^0.0.1",
-    "@nathanfaucett/is_object": "^0.0.1",
-    "@nathanfaucett/is_string": "^0.0.1",
-    "@nathanfaucett/is_undefined": "^0.0.1",
-    "@nathanfaucett/key_mirror": "^0.0.1",
-    "@nathanfaucett/array-map": "^0.0.1",
-    "@nathanfaucett/messenger": "^0.0.1",
-    "@nathanfaucett/messenger_adapter": "^0.0.1",
-    "@nathanfaucett/messenger_websocket_adapter": "^0.0.1",
-    "@nathanfaucett/messenger_worker_adapter": "^0.0.1",
-    "@nathanfaucett/now": "^0.0.2",
-    "@nathanfaucett/supports": "^0.0.1",
-    "@nathanfaucett/virt": "^0.0.1"
+    "@nathanfaucett/array-for_each": "0.0.1",
+    "@nathanfaucett/array-map": "0.0.1",
+    "@nathanfaucett/blur_node": "0.0.1",
+    "@nathanfaucett/create_pool": "0.0.1",
+    "@nathanfaucett/dom_caret": "0.0.1",
+    "@nathanfaucett/dom_dimensions": "0.0.1",
+    "@nathanfaucett/empty_function": "0.0.1",
+    "@nathanfaucett/environment": "0.0.1",
+    "@nathanfaucett/escape_text_content": "0.0.1",
+    "@nathanfaucett/event_listener": "0.0.1",
+    "@nathanfaucett/extend": "0.0.1",
+    "@nathanfaucett/focus_node": "0.0.1",
+    "@nathanfaucett/get_event_char_code": "0.0.1",
+    "@nathanfaucett/get_event_key": "0.0.1",
+    "@nathanfaucett/get_prototype_of": "0.0.1",
+    "@nathanfaucett/has": "0.0.1",
+    "@nathanfaucett/index_of": "0.0.1",
+    "@nathanfaucett/inherits": "0.0.1",
+    "@nathanfaucett/is_array": "0.0.1",
+    "@nathanfaucett/is_document": "0.0.1",
+    "@nathanfaucett/is_element": "0.0.1",
+    "@nathanfaucett/is_function": "0.0.1",
+    "@nathanfaucett/is_node": "0.0.1",
+    "@nathanfaucett/is_null": "0.0.1",
+    "@nathanfaucett/is_null_or_undefined": "0.0.1",
+    "@nathanfaucett/is_object": "0.0.1",
+    "@nathanfaucett/is_string": "0.0.1",
+    "@nathanfaucett/is_undefined": "0.0.1",
+    "@nathanfaucett/key_mirror": "0.0.1",
+    "@nathanfaucett/messenger": "0.0.1",
+    "@nathanfaucett/messenger_adapter": "0.0.1",
+    "@nathanfaucett/messenger_websocket_adapter": "0.0.1",
+    "@nathanfaucett/messenger_worker_adapter": "0.0.1",
+    "@nathanfaucett/now": "0.0.2",
+    "@nathanfaucett/supports": "0.0.1",
+    "@nathanfaucett/virt": "0.0.1"
   }
 }
